[gd_scene load_steps=7 format=3 uid="uid://c407t8daykb32"]

[ext_resource type="Script" path="res://scripts/constructionObjects/root/constructionObjects.gd" id="1_8pj86"]
[ext_resource type="Texture2D" uid="uid://w1juspoi5ey1" path="res://assets/images/constructions/furnance/root/furnance.png" id="2_gqkm1"]

[sub_resource type="Animation" id="Animation_wbnoc"]
resource_name = "use"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.5, 1.5), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_2xl4v"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6cc28"]
_data = {
"RESET": SubResource("Animation_2xl4v"),
"use": SubResource("Animation_wbnoc")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gj5r5"]
size = Vector2(42, 43)

[node name="furnance" type="StaticBody2D"]
collision_mask = 2
script = ExtResource("1_8pj86")

[node name="sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_gqkm1")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-14, 16, 14, 16, 14, 0, 13, 0, 13, -1, 12, -1, 12, -2, 5, -2, 5, -16, -5, -16, -5, -2, -12, -2, -12, -1, -13, -1, -13, 0, -14, 0)

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6cc28")
}

[node name="interactText" type="RichTextLabel" parent="."]
visible = false
offset_left = -5.0
offset_top = -39.0
offset_right = 9.0
offset_bottom = -15.0
text = "E"

[node name="hitbox" type="Area2D" parent="."]
collision_mask = 2

[node name="col" type="CollisionShape2D" parent="hitbox"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_gj5r5")

[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="area_exited" from="hitbox" to="." method="_on_hitbox_area_exited"]
